fix: align-text of Product and Revenue in the table so that it looks neater

--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,12 @@ body {
 
 .product-list th:first-child {
   width: 300px;
+  text-align: left;
 }
 
 .product-list th:last-child {
   width: 100px;
+  text-align: right;
 }
 
 .product-list tr:nth-child(2n) {
